--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,8 @@
-<app-binding></app-binding>
+<!--app-binding></app-binding-->
+<router-outlet></router-outlet>
+
+<a routerLink="/binding">Form</a>
+<br>
+<a routerLink="/grilla">Grilla</a>
+<br>
+<a routerLink="/">Dos</a>
